# hadal

./: ARCHITECTURE.md  Cargo.toml  LICENSE-MIT  README.md
assets/: hadal.1  hadal.desktop
hadal/: Cargo.toml
hadal-audio/: Cargo.toml
hadal-audio/src/: decoder.rs  error.rs  format.rs  lib.rs  pipeline.rs  player.rs  resampler.rs
hadal-common/: Cargo.toml
hadal-common/src/: config.rs  error.rs  events.rs  lib.rs  paths.rs  types.rs
hadal-dsp/: Cargo.toml
hadal-dsp/src/: analyzer.rs  biquad.rs  equalizer.rs  error.rs  lib.rs  visualizer.rs
hadal-library/: Cargo.toml
hadal-library/src/: artwork.rs  db.rs  error.rs  indexer.rs  lib.rs  models.rs  scanner.rs  schema.rs  search.rs
hadal-playlist/: Cargo.toml
hadal-playlist/src/: error.rs  internal.rs  lib.rs  m3u8.rs  queue.rs
hadal-tui/: Cargo.toml
hadal-tui/src/: app.rs  input.rs  lib.rs  output.rs  state.rs  theme.rs
hadal-tui/src/views/: equalizer.rs  library.rs  mod.rs  now_playing.rs  playlists.rs  queue.rs  search.rs  shell.rs
hadal-tui/src/widgets/: mod.rs  progress.rs  spectrum.rs  vu_meter.rs
hadal/src/: config.rs  main.rs
