[workspace]
resolver = "2"
members = [
    "hadal",
    "hadal-audio",
    "hadal-common",
    "hadal-dsp",
    "hadal-library",
    "hadal-playlist",
    "hadal-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Onyx Digital Intelligence Development LLC <oskodiak@onyxdigital.dev>"]
license = "GPL-3.0-only"
repository = "https://github.com/onyxdigitaldev/hadal"
homepage = "https://onyxdigital.dev"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
hadal-common = { path = "hadal-common" }
hadal-audio = { path = "hadal-audio" }
hadal-dsp = { path = "hadal-dsp" }
hadal-library = { path = "hadal-library" }
hadal-playlist = { path = "hadal-playlist" }
hadal-tui = { path = "hadal-tui" }

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "fs", "macros"] }

# Audio
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.15"
ringbuf = "0.4"
rustfft = "6.2"

# PipeWire
pipewire = "0.8"

# TUI
ratatui = "0.28"
ratatui-image = { version = "2", default-features = false, features = ["rustix"] }
crossterm = { version = "0.28", features = ["event-stream"] }
base64 = "0.22"
cpal = "0.15"

# Database
rusqlite = { version = "0.31", features = ["bundled", "modern_sqlite"] }

# Tags and metadata
lofty = "0.18"

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dirs = "5.0"
parking_lot = "0.12"
notify = "6.1"
clap = { version = "4.4", features = ["derive"] }
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
# Faster incremental builds
incremental = true
