[package]
name = "hadal-common"
description = "Shared types, errors, and utilities for Hadal music player"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
dirs.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
once_cell.workspace = true
