[package]
name = "hadal-tui"
description = "TUI frontend for the Hadal music player"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hadal-common.workspace = true
hadal-audio.workspace = true
hadal-library.workspace = true
hadal-playlist.workspace = true
hadal-dsp.workspace = true

ratatui.workspace = true
ratatui-image.workspace = true
crossterm.workspace = true
base64.workspace = true
cpal.workspace = true
image.workspace = true

tokio.workspace = true
parking_lot.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
libc = "0.2"
