[package]
name = "hadal"
description = "Audiophile-grade TUI music player for Linux"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "hadal"
path = "src/main.rs"

[dependencies]
hadal-common.workspace = true
hadal-library.workspace = true
hadal-tui.workspace = true

cpal.workspace = true
clap.workspace = true
toml.workspace = true

thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
dirs.workspace = true

[package.metadata.deb]
maintainer = "Hadal Contributors"
copyright = "2025-2026, Hadal Contributors"
license-file = ["../LICENSE-MIT", "0"]
extended-description = """An audiophile-grade terminal music player for Linux. \
Supports FLAC, MP3, AAC, Ogg Vorbis, Opus, WAV, and AIFF. \
Features a 10-band parametric equalizer, real-time spectrum analyzer, \
album art via Kitty protocol, and a ranger-style library browser."""
depends = "$auto"
section = "sound"
priority = "optional"
assets = [
    ["target/release/hadal", "usr/bin/", "755"],
    ["../assets/hadal.desktop", "usr/share/applications/", "644"],
    ["../assets/hadal.1", "usr/share/man/man1/", "644"],
    ["../assets/hadal.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
]
